# HawkSignalingServer

./: .clang-format  CMakeLists.txt  Dockerfile  conanfile.txt
include/: User.hpp  UsersManager.hpp
include/Controllers/: SignalingController.hpp  UserController.hpp  UsersController.hpp
include/Controllers/UserControllerHandlers/: IUserControllerHandler.hpp
include/Controllers/UsersControllerHandlers/: IUsersControllerHandler.hpp  IUsersControllerHandlersFactory.hpp  UsersControllerBinaryHandler.hpp  UsersControllerCloseHandler.hpp  UsersControllerHandlersFactory.hpp  UsersControllerPingHandler.hpp  UsersControllerPongHandler.hpp  UsersControllerTextHandler.hpp
include/Hawk/: IUsersPubSubService.hpp  User.hpp  UsersPubSubService.hpp
include/Hawk/Controllers/: SignalingController.hpp  UserController.hpp  UsersController.hpp
include/Hawk/Controllers/UsersControllerHandlers/: IUsersControllerHandler.hpp  IUsersControllerHandlersFactory.hpp  UsersControllerBinaryHandler.hpp  UsersControllerCloseHandler.hpp  UsersControllerConnectionClosedHandler.hpp  UsersControllerHandlersFactory.hpp  UsersControllerNewConnectionHandler.hpp  UsersControllerPingHandler.hpp  UsersControllerPongHandler.hpp  UsersControllerTextHandler.hpp
include/Hawk/Net/: IWebSocketConnection.hpp  WebSocketConnection.hpp  WebSocketUtils.hpp
include/Hawk/PubSubServices/: UsersPubSubService.hpp
src/: UsersManager.cpp  main.cpp
src/Controllers/: SignalingController.cpp  UserController.cpp  UsersController.cpp
src/Controllers/UsersControllerHandlers/: UsersControllerBinaryHandler.cpp  UsersControllerCloseHandler.cpp  UsersControllerHandlersFactory.cpp  UsersControllerPingHandler.cpp  UsersControllerPongHandler.cpp  UsersControllerTextHandler.cpp
src/Hawk/: CMakeLists.txt  UsersManager.cpp  UsersPubSubService.cpp  main.cpp
src/Hawk/Controllers/: CMakeLists.txt  SignalingController.cpp  UserController.cpp  UsersController.cpp
src/Hawk/Controllers/UsersControllerHandlers/: CMakeLists.txt  UsersControllerBinaryHandler.cpp  UsersControllerCloseHandler.cpp  UsersControllerConnectionClosedHandler.cpp  UsersControllerHandlersFactory.cpp  UsersControllerNewConnectionHandler.cpp  UsersControllerPingHandler.cpp  UsersControllerPongHandler.cpp  UsersControllerTextHandler.cpp
src/Hawk/Net/: CMakeLists.txt  WebSocketConnection.cpp  WebSocketUtils.cpp
src/Hawk/PubSubServices/: CMakeLists.txt  UsersPubSubService.cpp
tests/Hawk/ControllersTests/UsersControllerHandlersTests/: UsersControllerNewConnectionHandlerTest.cpp
